--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,15 +16,15 @@
 <body>
   <main class="min-height_100">
     <!-- Navigation -->
-    <div class="d-flex min-height_100">
+    <div class="d-flex flex-wrap min-height_100">
 
-      <div class="col-md-4 min-height_100">
-        <div class="bg-primary d-flex flex-column align-items-end justify-content-center min-height_100 pe-5">
+      <div class="col-lg-5 col-12 min-height_100">
+        <div class="bg-primary d-flex flex-column align-items-lg-end align-items-center justify-content-center min-height_100 pe-xl-5">
           <!-- Modules -->
           <div class="accordion" id="accordion-module"></div>
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-lg-7 col-12">
         <div id="accordionClass" class="d-flex flex-column justify-content-center ps-5 min-height_100"></div>
       </div>
     </div>
