--- a/static-front-end/login.html
+++ b/static-front-end/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Curso de Educaçao Financeira</title>
+    <title>Bem-vindo(a) ao Curso de Educaçao Financeira</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,29 +17,43 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/boot.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
 
-  <body>
-    <main class="min-height_100">
-      <!-- Navigation -->
-      <div class="d-flex flex-wrap min-height_100">
-        <div class="col-lg-5 col-12 min-height_100">
-          <div
-            class="bg-primary d-flex flex-column align-items-lg-end align-items-center justify-content-center min-height_100 pe-xl-5"
-          >
-            <!-- Modules -->
-            <div class="accordion" id="accordion-module"></div>
+  <body class="bg-primary">
+    <div class="container">
+      <main
+        class="min-height_100 d-flex justify-content-center align-items-center"
+      >
+        <div class="main-form-login mb-5">
+          <h1 class="title-login">
+            Bem-vindo(a) ao curso de Educação Financeira
+          </h1>
+          <p class="description-login mt-3 mb-4">
+            O curso tem como objetivo introduzir a educação financeira a fim de
+            mostrar aspectos imporantes que são úteis no dia a dia de cada
+            indivíduo. Para iniciar o curso, baixa preencher os dados abaixo.
+            Aproveite!
+          </p>
+          <div class="card card-custom pt-2">
+            <div class="card-body">
+              <form class="row">
+                <div class="col-12 mb-5">
+                  <label for="name" class="form-label">Digite seu nome para iniciar</label>
+                  <input type="text" class="form-control" id="name" placeholder="Ex: João" />
+                </div>
+                <div class="col-12 text-center">
+                  <button type="submit" class="btn btn-warning">
+                    Iniciar o Curso
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
-        <div class="col-lg-7 col-12">
-          <div
-            id="accordionClass"
-            class="d-flex flex-column justify-content-center ps-5 min-height_100"
-          ></div>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
