--- a/static-front-end/login.html
+++ b/static-front-end/login.html
@@ -47,7 +47,7 @@
               <form class="row">
                 <div class="col-12 mb-5">
                   <label for="name" class="form-label">Digite seu nome para iniciar</label>
-                  <input type="text" class="form-control" id="name" placeholder="Ex: João" />
+                  <input type="text" class="form-control" name="name" id="name" placeholder="Ex: João" />
                 </div>
                 <div class="col-12 text-center">
                   <button type="submit" class="btn btn-warning">
